fixed horizontal scrolling poll intro

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,5 @@
-/* html, body {
-  margin: 0;
-  height: 100%;
+/* * {
+  border: 1px solid red;
 } */
 
 html {
@@ -51,7 +50,8 @@ nav a {
 }
 
 nav a:hover {
-  color: yellow;
+  color: #894492;
+  background-color: #fffb7d;
 }
 
 header .nav-btn {
@@ -60,15 +60,15 @@ header .nav-btn {
   background: transparent;
   border: none;
   outline: none;
-  color: #7AB195;
-  visibility: hidden;
+  color: #78cc78;
+  display: none;
   opacity: 0;
   font-size: 2rem;
 }
-
-@media only screen and (max-width: 700px) {
+/************* media query for nav on mobile devices ************/
+@media screen and (max-width: 700px) {
   header .nav-btn {
-    visibility: visible;
+    display: inline-block;
     opacity: 1;
   }
 
@@ -82,7 +82,7 @@ header .nav-btn {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-evenly;
     /* gap: 1.5rem; */
     background-color: #494850;
     transition: 600ms;
@@ -116,6 +116,19 @@ header .nav-btn {
     padding: 10px;
   }
 
+}
+
+/************* media query for nav on larger screens ************/
+
+@media screen and (min-width: 701px){
+  header nav {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  header {
+    align-items: baseline;
+  }
 }
 
 h1 {
@@ -153,7 +166,7 @@ h1 {
   color: rgb(73, 72, 72);
   margin: 1em auto;
   margin-bottom: 4em;
-  width: 300px;
+  width: 275px;
   padding: 1em;
   border-radius: 20px;
   border: 3px solid grey;
